# pyray

./: .gitmodules  CMakeLists.txt  README.md
extras/python/: CMakeLists.txt  geo.cpp  next-actions.org
src/: CMakeLists.txt
src/ray/: canvas.cpp  canvas.hpp  canvas.test.cpp  colour.cpp  colour.hpp  colour.test.cpp  matrix.hpp  matrix.test.cpp  ppm.cpp  ppm.hpp  ppm.test.cpp  tuple.cpp  tuple.hpp  tuple.test.cpp
src/ray/geo/: tuple.cpp  tuple.hpp
